--- a/index.html
+++ b/index.html
@@ -971,8 +971,8 @@
   }
 
   .pr > div:nth-of-type(2) {
-    width: 55%; 
-    --prMar: -20%;
+    width: 50%; 
+    --prMar: -10%;
     margin-left: var(--prMar); 
     display: flex;
     flex-direction: column;
@@ -1744,6 +1744,14 @@
                 <br><br>
                 Enjoy a story driven adventure with handcrafted levels and mechanics such as throwing items or exploding enemies from afar.`,
           b1:  "Download Memory Shift"
+        },
+        lmdshow:{
+          inf: 'Unity · Blender · VS Code · Photoshop',
+          tit: "Escape From LMDShow",
+          con: `Escape from LMDShow is a escape room like game in which Juan Alberto, a really cool guy, is kidnapped by LMDShow and attempts to escape the house he was locked in.
+                <br><br>
+                To escape you will have to solve different puzzles with objects and codes that you will find exploring the rooms.`,
+          b1:  "Download Escape From LMDShow"
         }
       },
       bot: {
@@ -1950,6 +1958,14 @@
                 <br><br>
                 Disfruta de una aventura con historia, niveles hechos a mano y mecánicas como lanzar objetos o explotar enemigos desde la lejanía.`,
           b1:  "Descargar Memory Shift"
+        },
+        lmdshow:{
+          inf: 'Unity · Blender · VS Code · Photoshop',
+          tit: "Escape From LMDShow",
+          con: `Escape from LMDShow es un juego tipo escape room en el que Juan Alberto, un malagueño mu salao, es secuestrado por LMDShow y trata de escapar de la casa donde ha sido encerrado. 
+                <br><br>
+                Para escapar tendrás que resolver diferentes puzles con objetos y códigos que encontrarás tras explorar las habitaciones.`,
+          b1:  "Descargar Escape From LMDShow"
         }
       },
       bot: {
@@ -2727,22 +2743,22 @@
       //INTERESTED IN VIDEOGAMES
       document.getElementById('prGames').setAttribute('active', '')
       document.getElementById('prApps').removeAttribute('active', '')
-      //MEMORY SHIFT AS PROJECT 1
-      makeProject(1, lan.p.memory, 'Data/Images/Projects/memory.jpg', ["https://botpa.itch.io/memory-shift"])
-      //TWIN SPIRITS AS PROJECT 2
-      makeProject(2, lan.p.spirits, 'Data/Images/Projects/spirits.jpg', ["https://botpa.itch.io/twin-spirits"])
-      //VAPORCADE AS PROJECT 3
-      makeProject(3, lan.p.vapor, 'Data/Images/Projects/vaporcade.jpg', ["https://botpa.itch.io/vaporcade"])
-      //OTTERS AS PROJECT 4
-      makeProject(4, lan.p.otters, 'Data/Images/Projects/otters.jpg', ["https://botpa.itch.io/otters-odyssey"])
-      //COOKING PAPA AS PROJECT 5
-      makeProject(5, lan.p.papa, 'Data/Images/Projects/papa.jpg', ["https://botpa.itch.io/cooking-papa"])
-      //ASSISTANT ANDROID AS PROJECT 6
-      makeProject(6, lan.p.asisAn, 'Data/Images/Projects/assAndroid.jpg', ["Data/Orion Assistant.apk"])
-      //ASSISTANT PC AS PROJECT 7
-      makeProject(7, lan.p.asisPC, 'Data/Images/Projects/assPC.jpg', ["https://github.com/BOTPanzer/Orion-Assistant", "https://github.com/BOTPanzer/USB-Launcher"])
-      //MODDING AS PROJECT 8
-      makeProject(8, lan.p.mod, 'Data/Images/Projects/mod.jpg')
+      //ESCAPE FROM LMDSHOW AS PROJECT 1
+      makeProject(1, lan.p.lmdshow, 'Data/Images/Projects/lmdshow.jpg', ["https://botpa.itch.io/escape-from-lmdshow"])
+      //MEMORY SHIFT AS PROJECT 2
+      makeProject(2, lan.p.memory, 'Data/Images/Projects/memory.jpg', ["https://botpa.itch.io/memory-shift"])
+      //TWIN SPIRITS AS PROJECT 3
+      makeProject(3, lan.p.spirits, 'Data/Images/Projects/spirits.jpg', ["https://botpa.itch.io/twin-spirits"])
+      //VAPORCADE AS PROJECT 4
+      makeProject(4, lan.p.vapor, 'Data/Images/Projects/vaporcade.jpg', ["https://botpa.itch.io/vaporcade"])
+      //OTTERS AS PROJECT 5
+      makeProject(5, lan.p.otters, 'Data/Images/Projects/otters.jpg', ["https://botpa.itch.io/otters-odyssey"])
+      //COOKING PAPA AS PROJECT 6
+      makeProject(6, lan.p.papa, 'Data/Images/Projects/papa.jpg', ["https://botpa.itch.io/cooking-papa"])
+      //ASSISTANT ANDROID AS PROJECT 7
+      makeProject(7, lan.p.asisAn, 'Data/Images/Projects/assAndroid.jpg', ["Data/Orion Assistant.apk"])
+      //ASSISTANT PC AS PROJECT 8
+      makeProject(8, lan.p.asisPC, 'Data/Images/Projects/assPC.jpg', ["https://github.com/BOTPanzer/Orion-Assistant", "https://github.com/BOTPanzer/USB-Launcher"])
     } else {
       //INTERESTED IN APPS
       document.getElementById('prGames').removeAttribute('active')
@@ -2753,16 +2769,16 @@
       makeProject(2, lan.p.asisPC, 'Data/Images/Projects/assPC.jpg', ["https://github.com/BOTPanzer/Orion-Assistant", "https://github.com/BOTPanzer/USB-Launcher"])
       //FRAMEWORK AS PROJECT 3
       makeProject(3, lan.p.frame, 'Data/Images/Projects/frame.jpg', ["https://botpanzer.github.io/Orion-Framework"])
-      //MEMORY SHIFT AS PROJECT 4
-      makeProject(4, lan.p.memory, 'Data/Images/Projects/memory.jpg', ["https://botpa.itch.io/memory-shift"])
-      //TWIN SPIRITS AS PROJECT 5
-      makeProject(5, lan.p.spirits, 'Data/Images/Projects/spirits.jpg', ["https://botpa.itch.io/twin-spirits"])
-      //VAPORCADE AS PROJECT 6
-      makeProject(6, lan.p.vapor, 'Data/Images/Projects/vaporcade.jpg', ["https://botpa.itch.io/vaporcade"])
-      //OTTERS AS PROJECT 7
-      makeProject(7, lan.p.otters, 'Data/Images/Projects/otters.jpg', ["https://botpa.itch.io/otters-odyssey"])
-      //COOKING PAPA AS PROJECT 8
-      makeProject(8, lan.p.papa, 'Data/Images/Projects/papa.jpg', ["https://botpa.itch.io/cooking-papa"])
+      //ESCAPE FROM LMDSHOW AS PROJECT 4
+      makeProject(4, lan.p.lmdshow, 'Data/Images/Projects/lmdshow.jpg', ["https://botpa.itch.io/escape-from-lmdshow"])
+      //MEMORY SHIFT AS PROJECT 5
+      makeProject(5, lan.p.memory, 'Data/Images/Projects/memory.jpg', ["https://botpa.itch.io/memory-shift"])
+      //TWIN SPIRITS AS PROJECT 6
+      makeProject(6, lan.p.spirits, 'Data/Images/Projects/spirits.jpg', ["https://botpa.itch.io/twin-spirits"])
+      //VAPORCADE AS PROJECT 7
+      makeProject(7, lan.p.vapor, 'Data/Images/Projects/vaporcade.jpg', ["https://botpa.itch.io/vaporcade"])
+      //OTTERS AS PROJECT 8
+      makeProject(8, lan.p.otters, 'Data/Images/Projects/otters.jpg', ["https://botpa.itch.io/otters-odyssey"])
     }
   }
 
