Added Esto AÚN no es un Juego

--- a/index.html
+++ b/index.html
@@ -1752,6 +1752,16 @@
                 <br><br>
                 To escape you will have to solve different puzzles with objects and codes that you will find exploring the rooms.`,
           b1:  "Download Escape From LMDShow"
+        },
+        nogame:{
+          inf: 'Unity · Blender · VS Code · Photoshop',
+          tit: "Esto AÚN no es un Juego",
+          con: `In "Esto AÚN no es un juego" you will help a programer raccoon finish his game before his gamejam ends.
+                <br><br>
+                Due to the little time he has left, to achieve this you will have to go inside the game and fix bugs from there.
+                <br><br>
+                Your mission will be to change how things work, so that you are able to get to each level's ending and continue to the next.`,
+          b1:  "Download Esto AÚN no es un Juego"
         }
       },
       bot: {
@@ -1966,6 +1976,16 @@
                 <br><br>
                 Para escapar tendrás que resolver diferentes puzles con objetos y códigos que encontrarás tras explorar las habitaciones.`,
           b1:  "Descargar Escape From LMDShow"
+        },
+        nogame:{
+          inf: 'Unity · Blender · VS Code · Photoshop',
+          tit: "Esto AÚN no es un Juego",
+          con: `En "Esto AÚN no es un juego" ayudarás a un mapache programador a terminar su juego antes de que finalice su gamejam.
+                <br><br>
+                Debido al poco tiempo que le queda, para conseguirlo tendrás que meterte dentro de este y arreglar los bugs desde su interior.
+                <br><br>
+                Desde allí tu misión será cambiar cómo funcionan las cosas, de manera que se pueda llegar hasta el final de cada nivel y así continuar hasta el siguiente.`,
+          b1:  "Descargar Esto AÚN no es un Juego"
         }
       },
       bot: {
@@ -2747,18 +2767,18 @@
       makeProject(1, lan.p.lmdshow, 'Data/Images/Projects/lmdshow.jpg', ["https://botpa.itch.io/escape-from-lmdshow"])
       //MEMORY SHIFT AS PROJECT 2
       makeProject(2, lan.p.memory, 'Data/Images/Projects/memory.jpg', ["https://botpa.itch.io/memory-shift"])
-      //TWIN SPIRITS AS PROJECT 3
-      makeProject(3, lan.p.spirits, 'Data/Images/Projects/spirits.jpg', ["https://botpa.itch.io/twin-spirits"])
-      //VAPORCADE AS PROJECT 4
-      makeProject(4, lan.p.vapor, 'Data/Images/Projects/vaporcade.jpg', ["https://botpa.itch.io/vaporcade"])
-      //OTTERS AS PROJECT 5
-      makeProject(5, lan.p.otters, 'Data/Images/Projects/otters.jpg', ["https://botpa.itch.io/otters-odyssey"])
-      //COOKING PAPA AS PROJECT 6
-      makeProject(6, lan.p.papa, 'Data/Images/Projects/papa.jpg', ["https://botpa.itch.io/cooking-papa"])
-      //ASSISTANT ANDROID AS PROJECT 7
-      makeProject(7, lan.p.asisAn, 'Data/Images/Projects/assAndroid.jpg', ["Data/Orion Assistant.apk"])
-      //ASSISTANT PC AS PROJECT 8
-      makeProject(8, lan.p.asisPC, 'Data/Images/Projects/assPC.jpg', ["https://github.com/BOTPanzer/Orion-Assistant", "https://github.com/BOTPanzer/USB-Launcher"])
+      //ESTO AUN NO ES UN JUEGO AS PROJECT 3
+      makeProject(3, lan.p.nogame, 'Data/Images/Projects/nogame.jpg', ["https://botpa.itch.io/esto-aun-no-es-un-juego"])
+      //TWIN SPIRITS AS PROJECT 4
+      makeProject(4, lan.p.spirits, 'Data/Images/Projects/spirits.jpg', ["https://botpa.itch.io/twin-spirits"])
+      //VAPORCADE AS PROJECT 5
+      makeProject(5, lan.p.vapor, 'Data/Images/Projects/vaporcade.jpg', ["https://botpa.itch.io/vaporcade"])
+      //OTTERS AS PROJECT 6
+      makeProject(6, lan.p.otters, 'Data/Images/Projects/otters.jpg', ["https://botpa.itch.io/otters-odyssey"])
+      //COOKING PAPA AS PROJECT 7
+      makeProject(7, lan.p.papa, 'Data/Images/Projects/papa.jpg', ["https://botpa.itch.io/cooking-papa"])
+      //ASSISTANT ANDROID AS PROJECT 8
+      makeProject(8, lan.p.asisAn, 'Data/Images/Projects/assAndroid.jpg', ["Data/Orion Assistant.apk"])
     } else {
       //INTERESTED IN APPS
       document.getElementById('prGames').removeAttribute('active')
@@ -2773,12 +2793,12 @@
       makeProject(4, lan.p.lmdshow, 'Data/Images/Projects/lmdshow.jpg', ["https://botpa.itch.io/escape-from-lmdshow"])
       //MEMORY SHIFT AS PROJECT 5
       makeProject(5, lan.p.memory, 'Data/Images/Projects/memory.jpg', ["https://botpa.itch.io/memory-shift"])
-      //TWIN SPIRITS AS PROJECT 6
-      makeProject(6, lan.p.spirits, 'Data/Images/Projects/spirits.jpg', ["https://botpa.itch.io/twin-spirits"])
-      //VAPORCADE AS PROJECT 7
-      makeProject(7, lan.p.vapor, 'Data/Images/Projects/vaporcade.jpg', ["https://botpa.itch.io/vaporcade"])
-      //OTTERS AS PROJECT 8
-      makeProject(8, lan.p.otters, 'Data/Images/Projects/otters.jpg', ["https://botpa.itch.io/otters-odyssey"])
+      //ESTO AUN NO ES UN JUEGO AS PROJECT 6
+      makeProject(6, lan.p.nogame, 'Data/Images/Projects/nogame.jpg', ["https://botpa.itch.io/esto-aun-no-es-un-juego"])
+      //TWIN SPIRITS AS PROJECT 7
+      makeProject(7, lan.p.spirits, 'Data/Images/Projects/spirits.jpg', ["https://botpa.itch.io/twin-spirits"])
+      //VAPORCADE AS PROJECT 8
+      makeProject(8, lan.p.vapor, 'Data/Images/Projects/vaporcade.jpg', ["https://botpa.itch.io/vaporcade"])
     }
   }
 
