small text change

--- a/index.html
+++ b/index.html
@@ -1980,7 +1980,7 @@
         nogame:{
           inf: 'Unity · Blender · VS Code · Photoshop',
           tit: "Esto AÚN no es un Juego",
-          con: `En "Esto AÚN no es un juego" ayudarás a un mapache programador a terminar su juego antes de que finalice su gamejam.
+          con: `En "Esto AÚN no es un juego" ayudarás a un mapache programador a terminar su juego antes de que acabe su gamejam.
                 <br><br>
                 Debido al poco tiempo que le queda, para conseguirlo tendrás que meterte dentro de este y arreglar los bugs desde su interior.
                 <br><br>
