wave loading screen
- returned the wave as a loading screen
- removed unused font
- made social buttons an <a> to not depend on js

--- a/index.html
+++ b/index.html
@@ -120,12 +120,24 @@
       <!-- SOCIALS -->
       <div id="socialsMenu" class="socials">
         <div class="socialsLine"></div>
-        <img class="socialsButton" onclick="social('email')" src="Data/Images/Icons/email.png">
-        <img class="socialsButton" onclick="social('tiktok')" src="Data/Images/Icons/tiktok.png">
-        <img class="socialsButton" onclick="social('yt')" src="Data/Images/Icons/yt.png">
-        <img class="socialsButton" onclick="social('ig')" src="Data/Images/Icons/ig.png">
-        <img class="socialsButton" onclick="social('git')" src="Data/Images/Icons/git.png">
-        <img class="socialsButton" onclick="social('itchio')" src="Data/Images/Icons/itchio.png">
+        <a class="socialsButton" onclick="CopyMail()">
+          <img src="Data/Images/Icons/email.png">
+        </a>
+        <a class="socialsButton" target="_blank" href="https://www.tiktok.com/@botpanzer" onclick="sTikTok = true">
+          <img src="Data/Images/Icons/tiktok.png">
+        </a>
+        <a class="socialsButton" target="_blank" href="https://www.youtube.com/@botpa" onclick="sYT = true">
+          <img src="Data/Images/Icons/yt.png">
+        </a>
+        <a class="socialsButton" target="_blank" href="https://www.instagram.com/bot_panzer/" onclick="sIG = true">
+          <img src="Data/Images/Icons/ig.png">
+        </a>
+        <a class="socialsButton" target="_blank" href="https://github.com/BOTPanzer/" onclick="sGit = true">
+          <img src="Data/Images/Icons/git.png">
+        </a>
+        <a class="socialsButton" target="_blank" href="https://botpa.itch.io/" onclick="sItch = true">
+          <img src="Data/Images/Icons/itchio.png">
+        </a>
       </div>
 
       <!-- BALLS -->
@@ -140,12 +152,8 @@
       <div id="snackbar"></div>
     </div>
 
-    <!-- ENTER -->
-    <!--div id="enter" class="enter">
-      <div id="enBox" class="enBox">
-        <div id="enBtn1" class="enBtn" onclick="enterPancoverse()">DIVE INTO THE PANCOVERSE</div>
-        <div id="enBtn2" class="enBtn" glitch >DIVE PANCOVERSE INTO THE</div>
-      </div>
+    <!-- LOADING -->
+    <div id="enter" class="enter">
       <div style="position: absolute; bottom: 0; width: 100vw;">
         <svg class="wave" viewBox="0 0 1440 320">
           <path d="M0,160L48,160C96,160,192,160,288,176C384,192,480,224,576,240C672,256,768,256,864,250.7C960,245,1056,235,1152,224C1248,213,1344,203,1392,197.3L1440,192L1440,320L1392,320C1344,320,1248,320,1152,320C1056,320,960,320,864,320C768,320,672,320,576,320C480,320,384,320,288,320C192,320,96,320,48,320L0,320Z"></path>
@@ -158,7 +166,7 @@
         </svg>
         <div style="height: var(--waveBot); width: 100vw; bottom: 0; position: absolute; background: var(--accent); transition: height 1s;"></div>
       </div>
-    </div-->
+    </div>
 
     <!-- HOME -->
     <div id="home" class="page home">
@@ -469,12 +477,24 @@
       <div id="botFrom" style="font-size: 1em; font-family: lemon;">Arcane</div>
       <div id="botQuote" style="font-size: 2em; font-family: lemon; text-align: center;">There's a monster inside all of us</div>
       <div id="botSocials" class="botSocials">
-        <img class="socialsButton" onclick="social('email')" src="Data/Images/Icons/email.png">
-        <img class="socialsButton" onclick="social('tiktok')" src="Data/Images/Icons/tiktok.png">
-        <img class="socialsButton" onclick="social('yt')" src="Data/Images/Icons/yt.png">
-        <img class="socialsButton" onclick="social('ig')" src="Data/Images/Icons/ig.png">
-        <img class="socialsButton" onclick="social('git')" src="Data/Images/Icons/git.png">
-        <img class="socialsButton" onclick="social('itchio')" src="Data/Images/Icons/itchio.png">
+        <a class="socialsButton" onclick="CopyMail()">
+          <img src="Data/Images/Icons/email.png">
+        </a>
+        <a class="socialsButton" target="_blank" href="https://www.tiktok.com/@botpanzer" onclick="sTikTok = true">
+          <img src="Data/Images/Icons/tiktok.png">
+        </a>
+        <a class="socialsButton" target="_blank" href="https://www.youtube.com/@botpa" onclick="sYT = true">
+          <img src="Data/Images/Icons/yt.png">
+        </a>
+        <a class="socialsButton" target="_blank" href="https://www.instagram.com/bot_panzer/" onclick="sIG = true">
+          <img src="Data/Images/Icons/ig.png">
+        </a>
+        <a class="socialsButton" target="_blank" href="https://github.com/BOTPanzer/" onclick="sGit = true">
+          <img src="Data/Images/Icons/git.png">
+        </a>
+        <a class="socialsButton" target="_blank" href="https://botpa.itch.io/" onclick="sItch = true">
+          <img src="Data/Images/Icons/itchio.png">
+        </a>
       </div>
     </div>
   </body>
