Fixed loading unnecessary images

--- a/index.html
+++ b/index.html
@@ -317,7 +317,7 @@
         <div id="pr1" class="pr appear">
           <div>
             <span id="pr1Tag">Personal Project</span>
-            <img id="pr1Img" src="Data/Images/Projects/assAndroid.jpg">
+            <img id="pr1Img">
           </div>
           <div>
             <span id="pr1Inf">Java · Android Studio · UI/UX Design</span>
@@ -340,7 +340,7 @@
         <div id="pr2" class="pr appear" reverse>
           <div>
             <span id="pr2Tag">Personal Project</span>
-            <img id="pr2Img" src="Data/Images/Projects/assPC.jpg">
+            <img id="pr2Img">
           </div>
           <div>
             <span id="pr2Inf">Batch · HTML · CSS · JS · ElectronJS · UI/UX Design</span>
@@ -365,7 +365,7 @@
         <div id="pr3" class="pr appear">
           <div>
             <span id="pr3Tag">Personal Project</span>
-            <img id="pr3Img" src="Data/Images/Projects/frame.jpg">
+            <img id="pr3Img">
           </div>
           <div>
             <span id="pr3Inf">HTML · CSS · JS · UI/UX Design</span>
@@ -387,7 +387,7 @@
         <div id="pr4" class="pr appear" reverse>
           <div>
             <span id="pr4Tag">Personal Project</span>
-            <img id="pr4Img" src="Data/Images/Projects/hoodie.jpg">
+            <img id="pr4Img">
           </div>
           <div>
             <span id="pr4Inf">Illustrator · Photoshop · Sketching</span>
@@ -409,7 +409,7 @@
         <div id="prSmalls" class="hc" style="gap: calc(5 * var(--pageGap)); position: relative; flex-wrap: wrap;">
           <div id="pr5" class="pr2 appear">
             <span id="pr5Tag">Personal Project</span>
-            <img id="pr5Img" src="Data/Images/Projects/mod.jpg"> 
+            <img id="pr5Img"> 
             <span id="pr5Tit">PC Modding</span>
             <span id="pr5Con">
               Ever since I got into the PC world I started to get interested in modding, so I decided to make my own modded PC.
@@ -426,7 +426,7 @@
 
           <div id="pr6" class="pr2 appear">
             <span id="pr6Tag">Personal Project</span>
-            <img id="pr6Img" src="Data/Images/Projects/usb.jpg"> 
+            <img id="pr6Img"> 
             <span id="pr6Tit">GTX Usb</span>
             <span id="pr6Con">
               Carrying apps and games in a USB isn't a bad idea, but the memory's speed can cause problems.
@@ -441,7 +441,7 @@
 
           <div id="pr7" class="pr2 appear">
             <span id="pr7Tag">Personal Project</span>
-            <img id="pr7Img" src="Data/Images/Projects/disbots.jpg"> 
+            <img id="pr7Img"> 
             <span id="pr7Tit">Discord Bots</span>
             <span id="pr7Con">
               After checking out the cool things you can do with discord bots I got the idea of creating my own.
@@ -457,7 +457,7 @@
 
           <div id="pr8" class="pr2 appear">
             <span id="pr8Tag">Personal Project</span>
-            <img id="pr8Img" src="Data/Images/Projects/t45.jpg"> 
+            <img id="pr8Img"> 
             <span id="pr8Tit">T45 Helmet</span>
             <span id="pr8Con">
               Fallout is one of my favorite videogame series and, in it's universe, people use technologically advanced full-body suits called power armors.
