changed ig to reddit & added juan link to escape from lmdshow

--- a/index.html
+++ b/index.html
@@ -123,20 +123,20 @@
         <a class="socialsButton" onclick="CopyMail()">
           <img src="Data/Images/Icons/email.png">
         </a>
-        <a class="socialsButton" target="_blank" href="https://www.tiktok.com/@botpanzer" onclick="sTikTok = true">
-          <img src="Data/Images/Icons/tiktok.png">
-        </a>
-        <a class="socialsButton" target="_blank" href="https://www.youtube.com/@botpa" onclick="sYT = true">
-          <img src="Data/Images/Icons/yt.png">
-        </a>
-        <a class="socialsButton" target="_blank" href="https://www.instagram.com/bot_panzer/" onclick="sIG = true">
-          <img src="Data/Images/Icons/ig.png">
-        </a>
         <a class="socialsButton" target="_blank" href="https://github.com/BOTPanzer/" onclick="sGit = true">
           <img src="Data/Images/Icons/git.png">
         </a>
         <a class="socialsButton" target="_blank" href="https://botpa.itch.io/" onclick="sItch = true">
           <img src="Data/Images/Icons/itchio.png">
+        </a>
+        <a class="socialsButton" target="_blank" href="https://www.reddit.com/user/Botpa69" onclick="sReddit = true">
+          <img src="Data/Images/Icons/reddit.png">
+        </a>
+        <a class="socialsButton" target="_blank" href="https://www.youtube.com/@botpa" onclick="sYT = true">
+          <img src="Data/Images/Icons/yt.png">
+        </a>
+        <a class="socialsButton" target="_blank" href="https://www.tiktok.com/@botpanzer" onclick="sTikTok = true">
+          <img src="Data/Images/Icons/tiktok.png">
         </a>
       </div>
 
@@ -480,20 +480,20 @@
         <a class="socialsButton" onclick="CopyMail()">
           <img src="Data/Images/Icons/email.png">
         </a>
-        <a class="socialsButton" target="_blank" href="https://www.tiktok.com/@botpanzer" onclick="sTikTok = true">
-          <img src="Data/Images/Icons/tiktok.png">
-        </a>
-        <a class="socialsButton" target="_blank" href="https://www.youtube.com/@botpa" onclick="sYT = true">
-          <img src="Data/Images/Icons/yt.png">
-        </a>
-        <a class="socialsButton" target="_blank" href="https://www.instagram.com/bot_panzer/" onclick="sIG = true">
-          <img src="Data/Images/Icons/ig.png">
-        </a>
         <a class="socialsButton" target="_blank" href="https://github.com/BOTPanzer/" onclick="sGit = true">
           <img src="Data/Images/Icons/git.png">
         </a>
         <a class="socialsButton" target="_blank" href="https://botpa.itch.io/" onclick="sItch = true">
           <img src="Data/Images/Icons/itchio.png">
+        </a>
+        <a class="socialsButton" target="_blank" href="https://www.reddit.com/user/Botpa69" onclick="sReddit = true">
+          <img src="Data/Images/Icons/reddit.png">
+        </a>
+        <a class="socialsButton" target="_blank" href="https://www.youtube.com/@botpa" onclick="sYT = true">
+          <img src="Data/Images/Icons/yt.png">
+        </a>
+        <a class="socialsButton" target="_blank" href="https://www.tiktok.com/@botpanzer" onclick="sTikTok = true">
+          <img src="Data/Images/Icons/tiktok.png">
         </a>
       </div>
     </div>
