fixed a mobile bug & started porting some js to css

--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
       <div id="ach" class="achBG" onclick="toggleAchi()">
         <div id="achMenu" class="ach" onclick="event.stopPropagation()">
           <div></div>
-          <span id="achTit">ACHIEVEMENTS</span>
+          <span id="achTit" class="achTit">ACHIEVEMENTS</span>
           <div class="iBtn" style="position: absolute; top: 20px; right: 20px; border-radius: 40px;" onclick="toggleAchi()">
             <img style="height: 15px; width: 15px;" src="Data/Images/Icons/close.png">
           </div>
@@ -312,7 +312,7 @@
     </div>
 
     <!-- BOTTOM -->
-    <div id="bot" class="vc cc" style="width: calc(100% - 40px); margin-top: 5vh; padding: 20px; gap: 10px; font-size: 1vw;">
+    <div id="bot" class="bot">
       <div id="botFrom" style="font-size: 1em; font-family: lemon;">Arcane</div>
       <div id="botQuote" style="font-size: 2em; font-family: lemon; text-align: center;">There's a monster inside all of us</div>
       <div id="botSocials" class="botSocials">
