--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html id="html" lang="en">
+<html id="html" lang="en" mobile>
   <head>
     <!-- MAIN -->
     <meta charset="utf-8">
