--- a/index.html
+++ b/index.html
@@ -120,22 +120,22 @@
       <!-- SOCIALS -->
       <div id="socialsMenu" class="socials">
         <div class="socialsLine"></div>
-        <a class="socialsButton" onclick="CopyMail()">
+        <a class="socialsButton" onclick="copyMail()">
           <img src="Data/Images/Icons/email.png">
         </a>
-        <a class="socialsButton" target="_blank" href="https://github.com/BOTPanzer/" onclick="sGit = true">
+        <a class="socialsButton" target="_blank" href="https://github.com/BOTPanzer/" onclick="socialsOpen = true">
           <img src="Data/Images/Icons/git.png">
         </a>
-        <a class="socialsButton" target="_blank" href="https://botpa.itch.io/" onclick="sItch = true">
+        <a class="socialsButton" target="_blank" href="https://botpa.itch.io/" onclick="socialsOpen = true">
           <img src="Data/Images/Icons/itchio.png">
         </a>
-        <a class="socialsButton" target="_blank" href="https://www.reddit.com/user/Botpa69" onclick="sReddit = true">
+        <a class="socialsButton" target="_blank" href="https://www.reddit.com/user/Botpa69" onclick="socialsOpen = true">
           <img src="Data/Images/Icons/reddit.png">
         </a>
-        <a class="socialsButton" target="_blank" href="https://www.youtube.com/@botpa" onclick="sYT = true">
+        <a class="socialsButton" target="_blank" href="https://www.youtube.com/@botpa" onclick="socialsOpen = true">
           <img src="Data/Images/Icons/yt.png">
         </a>
-        <a class="socialsButton" target="_blank" href="https://www.tiktok.com/@botpanzer" onclick="sTikTok = true">
+        <a class="socialsButton" target="_blank" href="https://www.tiktok.com/@botpanzer" onclick="socialsOpen = true">
           <img src="Data/Images/Icons/tiktok.png">
         </a>
       </div>
@@ -152,8 +152,8 @@
       <div id="snackbar"></div>
     </div>
 
-    <!-- LOADING -->
-    <div id="enter" class="enter">
+    <!-- WAVES -->
+    <div id="waves" class="waves">
       <div style="position: absolute; bottom: 0; width: 100vw;">
         <svg class="wave" viewBox="0 0 1440 320">
           <path d="M0,160L48,160C96,160,192,160,288,176C384,192,480,224,576,240C672,256,768,256,864,250.7C960,245,1056,235,1152,224C1248,213,1344,203,1392,197.3L1440,192L1440,320L1392,320C1344,320,1248,320,1152,320C1056,320,960,320,864,320C768,320,672,320,576,320C480,320,384,320,288,320C192,320,96,320,48,320L0,320Z"></path>
@@ -316,22 +316,22 @@
       <div id="botFrom" style="font-size: 1em; font-family: lemon;">Arcane</div>
       <div id="botQuote" style="font-size: 2em; font-family: lemon; text-align: center;">There's a monster inside all of us</div>
       <div id="botSocials" class="botSocials">
-        <a class="socialsButton" onclick="CopyMail()">
+        <a class="socialsButton" onclick="copyMail()">
           <img src="Data/Images/Icons/email.png">
         </a>
-        <a class="socialsButton" target="_blank" href="https://github.com/BOTPanzer/" onclick="sGit = true">
+        <a class="socialsButton" target="_blank" href="https://github.com/BOTPanzer/" onclick="socialsOpen = true">
           <img src="Data/Images/Icons/git.png">
         </a>
-        <a class="socialsButton" target="_blank" href="https://botpa.itch.io/" onclick="sItch = true">
+        <a class="socialsButton" target="_blank" href="https://botpa.itch.io/" onclick="socialsOpen = true">
           <img src="Data/Images/Icons/itchio.png">
         </a>
-        <a class="socialsButton" target="_blank" href="https://www.reddit.com/user/Botpa69" onclick="sReddit = true">
+        <a class="socialsButton" target="_blank" href="https://www.reddit.com/user/Botpa69" onclick="socialsOpen = true">
           <img src="Data/Images/Icons/reddit.png">
         </a>
-        <a class="socialsButton" target="_blank" href="https://www.youtube.com/@botpa" onclick="sYT = true">
+        <a class="socialsButton" target="_blank" href="https://www.youtube.com/@botpa" onclick="socialsOpen = true">
           <img src="Data/Images/Icons/yt.png">
         </a>
-        <a class="socialsButton" target="_blank" href="https://www.tiktok.com/@botpanzer" onclick="sTikTok = true">
+        <a class="socialsButton" target="_blank" href="https://www.tiktok.com/@botpanzer" onclick="socialsOpen = true">
           <img src="Data/Images/Icons/tiktok.png">
         </a>
       </div>
