--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!doctype html>
-<html id="html" lang="en" mobile>
+<html lang="en" mobile>
   <head>
-    <!-- MAIN -->
+    <!-- Main -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Pancoverse</title>
@@ -15,81 +15,81 @@
 
 
 
-  <body style="overflow: hidden;">
-    <!-- OVERLAY -->
+  <body>
+    <!-- Overlay -->
     <div class="overlay">  
-      <!-- TOP BAR -->
-      <div id="topBar" class="top">
-        <div id="topTint" class="topTint"></div>
-        <div id="topH1" class="tBtn" onclick="goto('home')">
+      <!-- Navbar -->
+      <div class="nav">
+        <div class="navTint"></div>
+        <div class="navBtn" onclick="goto('home')">
           <span>00.&nbsp;</span>
-          <span id="topH1T">Home</span>
+          <span id="navH">Home</span>
         </div>
-        <div id="topA1" class="tBtn" onclick="goto('about')">
+        <div class="navBtn" onclick="goto('about')">
           <span>01.&nbsp;</span>
-          <span id="topA1T">About</span>
+          <span id="navA">About</span>
         </div>
-        <div id="topS1" class="tBtn" onclick="goto('skills')">
+        <div class="navBtn" onclick="goto('skills')">
           <span>02.&nbsp;</span>
-          <span id="topS1T">Skills</span>
+          <span id="navS">Skills</span>
         </div>
-        <div id="topP1" class="tBtn" onclick="goto('projects')">
+        <div class="navBtn" onclick="goto('projects')">
           <span>03.&nbsp;</span>
-          <span id="topP1T">Projects</span>
+          <span id="navP">Projects</span>
         </div>
-        <div id="topSpace" class="topSpace"></div>
+        <div id="navSpace"></div>
       </div>
 
-      <!-- TOP MENU -->
-      <div id="topMBG" class="topMBG" onclick="toggleMenu(false)"> 
-        <div id="topMenu" class="mBtn" onclick="event.stopPropagation(); if (!menuOpen) toggleMenu(true)">
+      <!-- Top menu -->
+      <div id="navMenuExit" onclick="toggleMenu(false)"> 
+        <div id="navMenu" onclick="event.stopPropagation(); if (!menuOpen) toggleMenu(true);">
           <img src="Data/Images/Icons/more.png">
-          <dot id="topDot1" class="btnDot" style="position: absolute; top: 5px; right: 5px;"></dot>
-          <div style="position: relative;" onclick="event.stopPropagation()">
-            <div style="height: 100%; width: 100%; top: 0; left: 0; background: var(--bg); opacity: .5; border-radius: 8px; position: absolute; z-index: -1;"></div>
-            <div id="topH2" class="tBtn2" onclick="goto('home')">
+          <dot id="navMenuDot1" class="navMenuDot"></dot>
+          <div onclick="event.stopPropagation()">
+            <div class="navMenuBtn" onclick="goto('home')">
               <img src="Data/Images/Icons/home.png">
-              <span id="topH2T">Home</span>
+              <span id="navMenuH">Home</span>
             </div>
-            <div id="topA2" class="tBtn2" onclick="goto('about')">
+            <div class="navMenuBtn" onclick="goto('about')">
               <img src="Data/Images/Icons/about.png">
-              <span id="topA2T">About</span>
+              <span id="navMenuA">About</span>
             </div>
-            <div id="topS2" class="tBtn2" onclick="goto('skills')">
+            <div class="navMenuBtn" onclick="goto('skills')">
               <img src="Data/Images/Icons/skills.png">
-              <span id="topS2T">Skills</span>
+              <span id="navMenuS">Skills</span>
             </div>
-            <div id="topP2" class="tBtn2" onclick="goto('projects')">
+            <div class="navMenuBtn" onclick="goto('projects')">
               <img src="Data/Images/Icons/projects.png">
-              <span id="topP2T">Projects</span>
+              <span id="navMenuP">Projects</span>
             </div>
-            <div class="tBtn2" onclick="switchTheme()">
+            <div class="navMenuBtn" onclick="switchTheme()">
               <img id="topTheImg" src="Data/Images/Icons/dark.png">
-              <span id="topThe">Theme</span>
+              <span id="navMenuThe">Theme</span>
             </div>
-            <div class="tBtn2" onclick="switchLan()">
+            <div class="navMenuBtn" onclick="switchLan()">
               <img src="Data/Images/Icons/language.png">
-              <span id="topLan">English</span>
+              <span id="navMenuLan">English</span>
             </div>
-            <div class="tBtn2" onclick="toggleAchi()">
+            <div class="navMenuBtn" onclick="toggleAchi()">
               <img src="Data/Images/Icons/cup.png">
-              <span id="topAch">Achievements</span>
-              <dot id="topDot2" class="btnDot" style="position: absolute; top: 5px; left: 35px;"></dot>
+              <span id="navMenuAch">Achievements</span>
+              <dot id="navMenuDot2" class="navMenuDot" style="left: 35px;"></dot>
             </div>
+            <div class="navMenuBG"></div>
           </div>
         </div>
       </div>
 
-      <!-- ACHIEVENTS -->
-      <div id="ach" class="achBG" onclick="toggleAchi()">
-        <div id="achMenu" class="ach" onclick="event.stopPropagation()">
+      <!-- Achievements -->
+      <div id="achMenuExit" onclick="toggleAchi()">
+        <div id="achMenu" onclick="event.stopPropagation()">
           <div></div>
-          <span id="achTit" class="achTit">ACHIEVEMENTS</span>
-          <div class="iBtn" style="position: absolute; top: 20px; right: 20px; border-radius: 40px;" onclick="toggleAchi()">
-            <img style="height: 15px; width: 15px;" src="Data/Images/Icons/close.png">
+          <span id="achMenuTit">ACHIEVEMENTS</span>
+          <div class="achMenuClose" onclick="toggleAchi()">
+            <img src="Data/Images/Icons/close.png">
           </div>
           <div>
-            <div id="achi1" class="achi" locked>
+            <div id="achi1" class="achievement" locked>
               <img src="Data/Images/Achievements/socials.jpg">
               <div>
                 <div id="achi1Tit">Interested fellow</div>
@@ -97,7 +97,7 @@
               </div>
               <span id="achi1Lock">LOCKED</span>
             </div>
-            <div id="achi2" class="achi" locked>
+            <div id="achi2" class="achievement" locked>
               <img src="Data/Images/Achievements/artyom.jpg">
               <div>
                 <div id="achi2Tit">Best friends</div>
@@ -105,7 +105,7 @@
               </div>
               <span id="achi2Lock">LOCKED</span>
             </div>
-            <div id="achi3" class="achi" locked>
+            <div id="achi3" class="achievement" locked>
               <img src="Data/Images/Achievements/drill.jpg">
               <div>
                 <div id="achi3Tit">Go with the flow</div>
@@ -117,8 +117,8 @@
         </div>
       </div>
 
-      <!-- SOCIALS -->
-      <div id="socialsMenu" class="socials">
+      <!-- Socials -->
+      <div class="socials">
         <div class="socialsLine"></div>
         <a class="socialsButton" onclick="copyMail()">
           <img src="Data/Images/Icons/email.png">
@@ -140,21 +140,21 @@
         </a>
       </div>
 
-      <!-- BALLS -->
-      <div id="balls" class="balls">
+      <!-- Balls -->
+      <div class="balls">
         <div id="ball1" class="ball" checked></div>
         <div id="ball2" class="ball"></div>
         <div id="ball3" class="ball"></div>
         <div id="ball4" class="ball"></div>
       </div>
 
-      <!-- SNACKBAR -->
+      <!-- Snackbar -->
       <div id="snackbar"></div>
     </div>
 
-    <!-- WAVES -->
-    <div id="waves" class="waves">
-      <div style="position: absolute; bottom: 0; width: 100vw;">
+    <!-- Waves -->
+    <div id="waves">
+      <div>
         <svg class="wave" viewBox="0 0 1440 320">
           <path d="M0,160L48,160C96,160,192,160,288,176C384,192,480,224,576,240C672,256,768,256,864,250.7C960,245,1056,235,1152,224C1248,213,1344,203,1392,197.3L1440,192L1440,320L1392,320C1344,320,1248,320,1152,320C1056,320,960,320,864,320C768,320,672,320,576,320C480,320,384,320,288,320C192,320,96,320,48,320L0,320Z"></path>
         </svg>
@@ -164,32 +164,32 @@
         <svg class="wave" viewBox="0 0 1440 320">
           <path d="M0,224L48,234.7C96,245,192,267,288,261.3C384,256,480,224,576,213.3C672,203,768,213,864,224C960,235,1056,245,1152,229.3C1248,213,1344,171,1392,149.3L1440,128L1440,320L1392,320C1344,320,1248,320,1152,320C1056,320,960,320,864,320C768,320,672,320,576,320C480,320,384,320,288,320C192,320,96,320,48,320L0,320Z"></path>
         </svg>
-        <div style="height: var(--waveBot); width: 100vw; bottom: 0; position: absolute; background: var(--accent); transition: height 1s;"></div>
+        <div></div>
       </div>
     </div>
 
-    <!-- HOME -->
-    <div id="home" class="page home">
-      <div id="homeMe" class="homeMe">
+    <!-- Home -->
+    <div id="home" class="page">
+      <div class="homeMe">
         <img src="Data/Images/me.png">
         <div></div>
       </div>
-      <span id="homeHi" class="homeHi">Howdy! I'm</span>
-      <span id="homeTit1" class="homeTit1">ALEJANDRO PANIAGUA</span>
-      <span id="homeTit2" class="homeTit2 shadow">And I love programming and designing</span>
-      <span id="homeD&T" class="homeDT shadow">
-        <span id="homeDesc" class="homeDesc">I'm a spanish studient, currently studying a videogame development degree, who has developed all sort of skills since little.</span>
+      <span id="homeHi">Howdy! I'm</span>
+      <span id="homeTit1">ALEJANDRO PANIAGUA</span>
+      <span id="homeTit2" class="shadow">And I love programming and designing</span>
+      <span class="homeDT shadow">
+        <span id="homeDesc">I'm a spanish studient, currently studying a videogame development degree, who has developed all sort of skills since little.</span>
         <span id="homeType1">I consider myself</span>
         <span id="homeType2">a 3D printing hobbyist</span><span class="homeLine">|</span>
       </span>
-      <div id="homeAbout" class="btn2" onclick="goto('about')">See more about me!</div>
+      <div id="homeAbout" class="pageBtn" onclick="goto('about')">See more about me!</div>
     </div>
     
-    <!-- ABOUT -->
-    <div id="about" class="page about">
-      <div id="aboutTextBox" class="aboutTextBox appear">
+    <!-- About -->
+    <div id="about" class="page">
+      <div class="aboutTextBox appear">
         <div class="hc" style="align-items: center; gap: 20px;">
-          <div class="paTit">
+          <div class="pageTit">
             <span>01.&nbsp;</span>
             <span id="aboutTit">About Me</span>
           </div>
@@ -200,20 +200,20 @@
           <br><br>
           <span id="aboutDesc2">I'm an independant well-organised person who finds problem-solving an easy task and loves giving things his own touch. Some of my interests are making apps and games, but I also enjoy 3D printing and DIY projects.</span>
         </span>
-        <div id="aboutSkills" class="btn2" onclick="goto('skills')">Check out my skills!</div>
+        <div id="aboutSkills" class="pageBtn" onclick="goto('skills')">Check out my skills!</div>
       </div>
 
-      <div id="aboutImgBox" class="aboutImgBox appear">
-        <div id="aboutImgName" class="aboutImgName"></div>
+      <div class="aboutImgBox appear">
+        <div id="aboutImgName" class="aboutImgName">Image Name</div>
         <img id="aboutImg" class="aboutImg" onclick="abClick()">
       </div>
     </div>
 
-    <!-- SKILLS -->
-    <div id="skills" class="page" style="justify-content: center; gap: calc(2 * var(--pageGap));">
-      <div id="skTop" class="vc" style="margin-right: calc(42vh + 60px);">
+    <!-- Skills -->
+    <div id="skills" class="page">
+      <div class="skTop">
         <div class="hc" style="align-items: center; gap: 20px;">
-          <div class="paTit">
+          <div class="pageTit">
             <span>02.&nbsp;</span>
             <span id="skTit">My Skills</span>
           </div>
@@ -291,13 +291,13 @@
         </div>
       </div>
       
-      <div id="skProj" class="btn2" onclick="goto('projects')">Check out my projects!</div>
+      <div id="skProj" class="pageBtn" onclick="goto('projects')">Check out my projects!</div>
     </div>
 
-    <!-- PROJECTS -->
-    <div id="projects" class="page" style="justify-content: center;">
-      <div id="prTop"  class="hc" style="align-items: center; gap: 20px; margin-right: calc(42vh + 60px);">
-        <div class="paTit">
+    <!-- Projects -->
+    <div id="projects" class="page">
+      <div class="prTop">
+        <div class="pageTit">
           <span>03.&nbsp;</span>
           <span id="prTit">My Projects</span>
         </div>
@@ -307,15 +307,15 @@
       <div id="prProjects"  class="vc" style="margin-top: 50px; gap: calc(5 * var(--pageGap));"></div>
 
       <div id="prMoreBox" class="vc cc" style="margin-top: 50px;">
-        <div id="prMore" class="btn2" onclick="addProject()">Load More</div>
+        <div id="prMore" class="pageBtn" onclick="addProject()">Load More</div>
       </div>
     </div>
 
-    <!-- BOTTOM -->
-    <div id="bot" class="bot">
+    <!-- Bottom -->
+    <div class="bot">
       <div id="botFrom" style="font-size: 1em; font-family: lemon;">Arcane</div>
       <div id="botQuote" style="font-size: 2em; font-family: lemon; text-align: center;">There's a monster inside all of us</div>
-      <div id="botSocials" class="botSocials">
+      <div class="botSocials">
         <a class="socialsButton" onclick="copyMail()">
           <img src="Data/Images/Icons/email.png">
         </a>
@@ -342,5 +342,6 @@
 
 
 
+  <!-- JS -->
   <script src="Data/JS/main.js"></script>
 </html>
